--- a/src/components/phone/Phone.scss
+++ b/src/components/phone/Phone.scss
@@ -16,6 +16,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width:100%
 }
 
 #incoming {
